# secure-biometric

./: .env.example  .env.test  CHANGELOG.md  Cargo.toml  LICENSE  PROJECT_STATE.md  README.md  SECURITY.md  requirements.txt  to-do-backend.md
docs/: ARCHITECTURE.md  PYTHON_PROCESS.md  RUST_BACKEND_DESIGN.md  RUST_TESTING.md  project_overview.md
exploration/face-capture/: face-capture.ipynb
migrations/: 20240101000000_create_users_table.sql  20240101000001_create_tasks_table.sql  20240101000003_create_sessions_table.sql
rust-process/: Cargo.toml  README.md
rust-process/benches/: storage_benchmarks.rs
rust-process/migrations/: 20240101000002_create_projects_table.sql  20240101000004_create_api_keys_table.sql
rust-process/src/: error.rs  lib.rs  main.rs
rust-process/src/api/: auth.rs  mod.rs  openapi.rs  projects.rs  tasks.rs  users.rs
rust-process/src/config/: settings.py
rust-process/src/logging/: mod.rs
rust-process/src/middleware/: auth_middleware.rs  logger.rs
rust-process/src/rag/: mod.rs
rust-process/src/repositories/: api_key_repository.rs  user_repository.rs
rust-process/src/security/: encryption.rs  error.rs  key_manager.rs  mod.rs
rust-process/src/storage/: error.rs  mod.rs  vault.rs
rust-process/src/templates/: error.rs  mod.rs  template.rs
rust-process/tests/: middleware_tests.rs  mod.rs  rag_tests.rs  test_runner.rs
rust-process/tests/common/: metrics.rs  mod.rs
rust-process/tests/functional/: storage_tests.rs
rust-process/tests/integration/: api_tests.rs
rust-process/tests/performance/: load_tests.rs
rust-process/tests/security/: encryption_tests.rs  mod.rs
src/: README.md  main.py  main.rs  models.rs
src/api/: health.rs  mod.rs  openapi.rs
src/biometric/: pipeline.py
src/biometric/analysis/: change_detector.py  color_analysis.py
src/biometric/analysis/depth/: depth_mapper.py  feature_extractor.py  mesh_generator.py
src/biometric/analysis/facial_features/: expression_analyzer.py  geometry_analyzer.py  landmark_analyzer.py
src/biometric/auth/: biometric_auth.py
src/biometric/capture/: landmarks.py  video.py
src/biometric/utils/: config.py  data_handler.py  documentation.py  session_manager.py  visualization.py
src/biometric/visualization/: __init__.py  depth_visualizer.py  feature_visualizer.py  mesh_visualizer.py
src/config/: database.rs  mod.rs
src/middleware/: mod.rs  rate_limiter.rs
src/repositories/: mod.rs  project_repository.rs  session_repository.rs  task_repository.rs  user_repository.rs
src/services/: auth_service.rs
tests/: auth_tests.rs  database_tests.rs  health_tests.rs  openapi_tests.rs
