[package]
name = "secure-biometric"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Secure biometric authentication system"
license = "MIT"
repository = "https://github.com/yourusername/secure-biometric"

[[bin]]
name = "secure-biometric"
path = "src/main.rs"

[lib]
name = "secure_biometric"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio-native-tls", "migrate"] }
dotenvy = "0.15"
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"

[dev-dependencies]
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio-native-tls", "migrate", "offline"] }
