[package]
name = "secure-biometric"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Secure biometric template storage and matching system"
license = "MIT"
repository = "https://github.com/yourusername/secure-biometric"

[[bin]]
name = "secure-biometric"
path = "src/main.rs"

[dependencies]
# Core dependencies
actix-web = "4.4"
sled = "0.34"
ring = "0.17"
bincode = "1.3"
zstd = "0.12"
uuid = { version = "1.6", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
log = "0.4"
time = { version = "0.3", features = ["formatting"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Web Framework
actix-web-httpauth = "0.8"

# Cryptography
rand = "0.8"

# Parallel Processing
rayon = "1.7"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.10"

# Metrics
prometheus = "0.13"

# Documentation
utoipa = { version = "4.0", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "4.0", features = ["actix-web"] }

[dev-dependencies]
# Testing utilities
tempfile = "3.8"
tokio-test = "0.4"
test-log = "0.2"
env_logger = "0.10"
pretty_assertions = "1.4"
criterion = { version = "0.5", features = ["async_tokio"] }
mockall = "0.11"

[[bench]]
name = "storage_benchmarks"
harness = false

[features]
default = []
test-utils = []
